--- a/contact-page.html
+++ b/contact-page.html
@@ -11,13 +11,17 @@
     <!-- Google Fonts - Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --color-primary-red: #FF0000; /* Pure Red - commonly used for vibrant logos */
+            --color-dark-red: #CC0000; /* A slightly darker shade of pure red */
+        }
         body {
             font-family: 'Inter', sans-serif;
             background-color: #f8fafc; /* Light Slate 50 */
             color: #1e293b; /* Slate 900 */
         }
         .btn-primary {
-            background-color: #dc2626; /* Red 700 */
+            background-color: var(--color-primary-red);
             color: white;
             padding: 0.75rem 1.5rem;
             border-radius: 0.5rem; /* rounded-lg */
@@ -26,7 +30,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .btn-primary:hover {
-            background-color: #b91c1c; /* Red 800 */
+            background-color: var(--color-dark-red);
         }
         .form-input {
             border-radius: 0.5rem; /* rounded-lg */
@@ -37,11 +41,11 @@
         }
         .form-input:focus {
             outline: none;
-            border-color: #dc2626; /* Red 700 */
+            border-color: var(--color-primary-red);
             box-shadow: 0 0 0 3px rgba(220, 38, 38, 0.2); /* Red 700 with opacity */
         }
         .ohdibs-logo {
-            height: 40px; /* Adjust height as needed */
+            height: 120px; /* Adjusted from 40px to 120px (3x larger) */
             width: auto;
         }
     </style>
@@ -49,20 +53,24 @@
 <body class="antialiased">
 
     <!-- Header Section -->
-    <header class="bg-white shadow-sm py-4">
+    <header class="bg-[#FF0000] shadow-sm py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
-            <div class="p-2">
-                <img src="http://googleusercontent.com/file_content/2" alt="OH Dibs Logo" class="ohdibs-logo">
+            <div class="p-2 flex items-center">
+                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo mr-4">
+                <div class="text-white text-sm md:text-base">
+                    <a href="tel:8507643427" class="block hover:text-gray-200 transition duration-200">(850) 764-3427</a>
+                    <a href="mailto:info@OHDibs.com" class="block hover:text-gray-200 transition duration-200">info@OHDibs.com</a>
+                </div>
             </div>
             <ul class="hidden md:flex space-x-6">
-                <li><a href="index.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Home</a></li>
-                <li><a href="features.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Features</a></li>
-                <li><a href="pricing.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Pricing</a></li>
-                <li><a href="faq.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">FAQ</a></li>
-                <li><a href="contact-page.html" class="text-red-700 font-medium transition duration-200">Contact</a></li>
+                <li><a href="index.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Home</a></li>
+                <li><a href="features.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Features</a></li>
+                <li><a href="pricing.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Pricing</a></li>
+                <li><a href="faq.html" class="text-white hover:text-gray-200 font-medium transition duration-200">FAQ</a></li>
+                <li><a href="contact-page.html" class="text-white font-medium transition duration-200">Contact</a></li>
             </ul>
             <!-- Mobile Menu Button (Hamburger) -->
-            <button class="md:hidden text-gray-700 focus:outline-none">
+            <button class="md:hidden text-white focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
             </button>
         </nav>
@@ -111,8 +119,6 @@
             <div class="flex justify-center space-x-6">
                 <a href="#" class="hover:text-white transition duration-200">Privacy Policy</a>
                 <a href="#" class="hover:text-white transition duration-200">Terms of Service</a>
-                <a href="tel:8507643427" class="hover:text-white transition duration-200">(850) 764-3427</a>
-                <a href="mailto:info@OHDibs.com" class="hover:text-white transition duration-200">info@OHDibs.com</a>
             </div>
         </div>
     </footer>
