--- a/pricing.html
+++ b/pricing.html
@@ -9,7 +9,7 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght=300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --color-primary-red: #FF0000; /* Pure Red - commonly used for vibrant logos */
@@ -58,7 +58,7 @@
     <header class="bg-[#FF0000] shadow-sm py-4">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div class="p-2">
-                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/Untitled%20design%20%282%29.png" alt="OH Dibs Logo" class="ohdibs-logo">
+                <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo">
             </div>
             <ul class="hidden md:flex space-x-6">
                 <li><a href="index.html" class="text-white hover:text-gray-200 font-medium transition duration-200">Home</a></li>
@@ -108,7 +108,7 @@
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
                     </ul>
-                    <button class="btn-primary w-full">Choose Basic</button>
+                    <a href="order-form-page.html" class="btn-primary w-full inline-block">Choose Basic</a>
                 </div>
 
                 <!-- Pricing Card 2: Standard -->
@@ -138,7 +138,7 @@
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
                     </ul>
-                    <button class="btn-primary w-full">Choose Standard</button>
+                    <a href="order-form-page.html" class="btn-primary w-full inline-block">Choose Standard</a>
                 </div>
 
                 <!-- Pricing Card 3: Pro -->
@@ -168,7 +168,7 @@
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Dedicated Onboarding</li>
                     </ul>
-                    <button class="btn-primary w-full">Choose Pro</button>
+                    <a href="order-form-page.html" class="btn-primary w-full inline-block">Choose Pro</a>
                 </div>
 
                 <!-- Pricing Card 4: Enterprise -->
@@ -197,7 +197,7 @@
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
                         <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
                     </ul>
-                    <button class="btn-primary w-full">Contact Sales</button>
+                    <a href="contact-page.html" class="btn-primary w-full inline-block">Contact Sales</a>
                 </div>
             </div>
         </div>
