--- a/pricing.html
+++ b/pricing.html
@@ -89,7 +89,7 @@
     <header class="bg-[#FF0000] shadow-sm py-4 relative">
         <nav class="container mx-auto px-4 flex justify-between items-center">
             <div class="p-2">
-                <a href="index.html"> <!-- Added link to home page for logo -->
+                <a href="index.html"> <!-- Link to home page for logo -->
                     <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo">
                 </a>
             </div>
@@ -121,4 +121,163 @@
             <h1 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">Simple & Transparent Pricing</h1>
             <p class="text-center text-gray-600 mb-10 max-w-3xl mx-auto">
                 Our pricing is designed to scale with your brokerage. Lock in early adopter rates for the first 30 offices!
-            <
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
+                <!-- Pricing Card 1: Basic -->
+                <div class="card border-2 border-gray-200 text-center">
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Basic Plan</h3>
+                    <p class="text-gray-500 mb-6">For brokerages with <span class="font-semibold">0-25 agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            $199<span class="text-xl font-medium text-gray-500">/month</span>
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            $249<span class="text-lg font-medium text-gray-400">/month</span>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500 <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                    </ul>
+                    <a href="order-form-page.html" class="btn-primary w-full inline-block">Choose Basic</a>
+                </div>
+
+                <!-- Pricing Card 2: Standard -->
+                <div class="card border-2 border-[var(--color-primary-red)] text-center relative">
+                    <div class="absolute top-0 right-0 bg-[var(--color-primary-red)] text-white text-xs font-bold px-3 py-1 rounded-bl-lg rounded-tr-lg">Popular</div>
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Standard Plan</h3>
+                    <p class="text-gray-500 mb-6">For brokerages with <span class="font-semibold">26-100 agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            $299<span class="text-xl font-medium text-gray-500">/month</span>
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            $374<span class="text-lg font-medium text-gray-400">/month</span>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500 <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                    </ul>
+                    <a href="order-form-page.html" class="btn-primary w-full inline-block">Choose Standard</a>
+                </div>
+
+                <!-- Pricing Card 3: Pro -->
+                <div class="card border-2 border-gray-200 text-center">
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Pro Plan</h3>
+                    <p class="text-gray-500 mb-6">For brokerages with <span class="font-semibold">101-300 agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            $399<span class="text-xl font-medium text-gray-500">/month</span>
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            $499<span class="text-lg font-medium text-gray-400">/month</span>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500 <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Dedicated Onboarding</li>
+                    </ul>
+                    <a href="order-form-page.html" class="btn-primary w-full inline-block">Choose Pro</a>
+                </div>
+
+                <!-- Pricing Card 4: Enterprise -->
+                <div class="card border-2 border-gray-200 text-center">
+                    <h3 class="text-2xl font-bold mb-4 text-[var(--color-primary-red)]">Enterprise Plan</h3>
+                    <p class="text-gray-500 mb-6">Custom solutions for brokerages with <span class="font-semibold">301+ agents</span>.</p>
+                    <div class="mb-2">
+                        <p class="text-lg font-semibold text-[var(--color-primary-red)]">Early Adopter Price:</p>
+                        <div class="text-4xl font-extrabold text-gray-900">
+                            Call for Pricing
+                        </div>
+                    </div>
+                    <div class="mb-6">
+                        <p class="text-lg font-semibold text-gray-700">Standard Price:</p>
+                        <div class="text-3xl font-extrabold text-gray-500">
+                            Call for Pricing
+                        </div>
+                    </div>
+                    <p class="text-gray-600 mb-6 text-lg font-semibold">$500+ <span class="text-base font-normal">one-time setup</span></p>
+                    <ul class="text-left text-gray-700 space-y-3 mb-8">
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Unlimited Open Houses</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Effortless Scheduling</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Automated Notifications</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Mobile-Friendly Interface</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Priority Support</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Leverage for Top Agents</li>
+                        <li class="flex items-center"><span class="text-green-500 mr-2">✔</span> Market Activity Insights</li>
+                    </ul>
+                    <a href="contact-page.html" class="btn-primary w-full inline-block">Contact Sales</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Call to Action / Contact Section (replicated for standalone page) -->
+    <section class="bg-[var(--color-dark-red)] text-white py-16 md:py-24 text-center rounded-t-3xl shadow-xl">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl md:text-4xl font-bold mb-6">Ready to Transform Your Open Houses?</h2>
+            <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90">
+                Join forward-thinking brokerages transforming their open house management.
+            </p>
+            <a href="contact-page.html" class="btn-primary bg-white text-[var(--color-dark-red)] hover:bg-gray-100 inline-block">
+                Contact Us Today
+            </a>
+        </div>
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="bg-gray-800 text-gray-300 py-8">
+        <div class="container mx-auto px-4 text-center md:flex md:justify-between md:items-center">
+            <div class="mb-4 md:mb-0">
+                &copy; 2025 OH Dibs. All rights reserved.
+            </div>
+            <div class="flex justify-center space-x-6">
+                <a href="#" class="hover:text-white transition duration-200">Privacy Policy</a>
+                <a href="#" class="hover:text-white transition duration-200">Terms of Service</a>
+                <a href="tel:8507643427" class="hover:text-white transition duration-200">(850) 764-3427</a>
+                <a href="mailto:info@OHDibs.com" class="hover:text-white transition duration-200">info@OHDibs.com</a>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        // JavaScript for mobile menu toggle
+        document.getElementById('mobile-menu-button').addEventListener('click', function() {
+            const mobileMenu = document.getElementById('mobile-menu');
+            mobileMenu.classList.toggle('active');
+        });
+    </script>
+</body>
+</html>
