--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             color: var(--color-primary-red);
         }
         .ohdibs-logo {
-            height: 134px; /* Consistent logo size */
+            height: 120px; /* Adjusted from 40px to 120px (tripled) */
             width: auto;
         }
         /* Mobile navigation specific styles */
@@ -84,7 +84,7 @@
 <body class="antialiased">
 
     <!-- Header Section -->
-    <header class="bg-white shadow-sm py-0 relative"> <!-- Changed background to white -->
+    <header class="bg-white shadow-sm py-0 relative"> <!-- Changed background to white and adjusted padding -->
         <nav class="container mx-auto px-4 flex justify-between items-center py-0">
             <div class="">
                 <a href="index.html"> <!-- Added link to home page for logo -->
