--- a/features.html
+++ b/features.html
@@ -91,11 +91,11 @@
 <body class="antialiased">
 
     <!-- Header Section (Consistent with other pages) -->
-    <header class="bg-[#FF0000] shadow-sm py-4 relative">
-        <nav class="container mx-auto px-4 flex justify-between items-center">
+    <header class="bg-[#FF0000] shadow-sm py-2 relative">
+        <nav class="container mx-auto px-4 flex justify-between items-center py-0">
             <div class="p-2">
-                <a href="index.html"> <!-- Link to home page for logo -->
-                    <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo">
+                <a href="index.html">
+                    <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo" style="height: 67px;">
                 </a>
             </div>
             <ul id="desktop-nav" class="hidden md:flex space-x-6">
@@ -124,12 +124,12 @@
     <div class="w-full h-px bg-gray-300"></div>
 
     <!-- Features Hero Section -->
-    <section class="bg-white text-gray-800 py-20 md:py-32 text-center rounded-b-3xl shadow-xl">
+    <section class="bg-white text-gray-800 py-6 md:py-8 text-center rounded-b-3xl shadow-xl"> <!-- Reduced py-8 to py-6 and md:py-12 to md:py-8 -->
         <div class="container mx-auto px-4">
             <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6 animate-fade-in-down">
                 Unleash the Full Potential of Your Brokerage
             </h1>
-            <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90 animate-fade-in-up">
+            <p class="text-lg md:text-xl mb-3 max-w-3xl mx-auto opacity-90 animate-fade-in-up"> <!-- Reduced mb-4 to mb-3 -->
                 OH Dibs is packed with powerful features designed to simplify your workflow, empower your agents, and grow your business.
             </p>
             <a href="contact-page.html" class="btn-primary inline-block bg-[var(--color-primary-red)] text-white hover:bg-[var(--color-dark-red)]" style="border-bottom: 2px solid #a0aec0;">
@@ -139,10 +139,10 @@
     </section>
 
     <!-- Core Features Section -->
-    <section class="py-16 md:py-24 bg-white">
+    <section class="py-12 md:py-16 bg-white"> <!-- Reduced py-16 to py-12 and md:py-20 to md:py-16 -->
         <div class="container mx-auto px-4">
             <!-- Line above "Our Core Features" -->
-            <div class="w-full h-px bg-gray-300 mb-12"></div>
+            <div class="w-full h-px bg-gray-300 mb-4"></div> <!-- Reduced mb-6 to mb-4 -->
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800">Our Core Features</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Feature 1: Unlimited Open Houses -->
@@ -204,7 +204,7 @@
     </section>
 
     <!-- Call to Action / Pricing Section -->
-    <section class="bg-[var(--color-dark-red)] text-white py-16 md:py-24 text-center rounded-t-3xl shadow-xl">
+    <section class="bg-[var(--color-dark-red)] text-white py-12 md:py-16 text-center rounded-t-3xl shadow-xl"> <!-- Reduced py-16 to py-12 and md:py-24 to md:py-16 -->
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Ready to Streamline Your Brokerage?</h2>
             <p class="text-lg md:text-xl mb-10 max-w-3xl mx-auto opacity-90">
@@ -217,7 +217,7 @@
     </section>
 
     <!-- Footer Section (Consistent with other pages) -->
-    <footer class="bg-gray-800 text-gray-300 py-8 mt-auto">
+    <footer class="bg-gray-800 text-gray-300 py-6 mt-auto"> <!-- Reduced py-8 to py-6 -->
         <div class="container mx-auto px-4 text-center md:flex md:justify-between md:items-center">
             <div class="mb-4 md:mb-0">
                 &copy; 2025 OH Dibs. All rights reserved.
