--- a/features.html
+++ b/features.html
@@ -91,11 +91,11 @@
 <body class="antialiased">
 
     <!-- Header Section (Consistent with other pages) -->
-    <header class="bg-[#FF0000] shadow-sm py-2 relative">
-        <nav class="container mx-auto px-4 flex justify-between items-center py-0">
+    <header class="bg-[#FF0000] shadow-sm py-2 relative"> <!-- Reduced py-4 to py-2 -->
+        <nav class="container mx-auto px-4 flex justify-between items-center py-0"> <!-- py-0 for tighter nav -->
             <div class="p-2">
-                <a href="index.html">
-                    <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo" style="height: 67px;">
+                <a href="index.html"> <!-- Link to home page for logo -->
+                    <img src="https://storage.googleapis.com/idx-acnt-gs.ihouseprd.com/AR1059431/file_manager/OHDibsLogo.png" alt="OH Dibs Logo" class="ohdibs-logo" style="height: 67px;"> <!-- Reduced logo height -->
                 </a>
             </div>
             <ul id="desktop-nav" class="hidden md:flex space-x-6">
