--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <li><a href="index.html" class="text-gray-700 font-medium transition duration-200 hover:text-red-700">Home</a></li>
                 <li><a href="features.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Features</a></li>
                 <li><a href="pricing.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Pricing</a></li>
+                <li><a href="order-form-page.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Order</a></li>
                 <li><a href="faq.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">FAQ</a></li>
                 <li><a href="contact-page.html" class="text-gray-700 hover:text-red-700 font-medium transition duration-200">Contact</a></li>
             </ul>
@@ -108,6 +109,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="features.html">Features</a></li>
             <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="order-form-page.html">Order</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="contact-page.html">Contact</a></li>
         </ul>
@@ -139,6 +141,9 @@
         </div>
     </section>
 
+    <!-- Thick Light Grey Line -->
+    <div class="w-full h-2 bg-gray-300"></div>
+
     <!-- Shortened Pricing Section for Home Page -->
     <section class="py-16 md:py-24 bg-white text-center">
         <div class="container mx-auto px-4">
@@ -146,7 +151,10 @@
             <p class="text-lg text-gray-600 mb-10 max-w-2xl mx-auto">
                 Find the perfect OH Dibs plan for your team, with flexible pricing and early adopter discounts.
             </p>
-            <a href="pricing.html" class="btn-primary">View Pricing Details</a>
+            <div class="flex justify-center space-x-4">
+                <a href="pricing.html" class="btn-primary">View Pricing Details</a>
+                <a href="order-form-page.html" class="btn-primary bg-gray-700 hover:bg-gray-800">Order Now</a>
+            </div>
         </div>
     </section>
 
